--- a/css/style.css
+++ b/css/style.css
@@ -95,12 +95,13 @@ h1,h2,h3,h4,h5,h6 {
 	font-weight: bold;
 	margin: 0;
 	letter-spacing: -1px;
+	line-height: 1.3;
 }
 
 p {
     font-size: 19px;
     color: #555;
-    line-height: 24px;
+    line-height: 26px;
 	font-weight: 400;
 	font-family: 'Gotham', sans-serif;
 	letter-spacing: 0.5px;
@@ -4907,7 +4908,7 @@ div[id^='subscription-'] .subscription-form-text {
     padding: 9px 15px!important;
     background-color: #ffffff;
     border-radius: 4px;
-    border-color: #fffff;
+    border-color: #ffffff;
     border-width: 0px;
     vertical-align: .text-center!important;
     border-style: solid;
@@ -5005,7 +5006,7 @@ div[id^='subscription-'] .submit-button {
 		background: transparent;
 	}
 	.btn {
-		white-space: break-spaces;
+		white-space: normal;
 	}
 	.btn.btn-lg {
 		font-size: 15px;
@@ -5861,7 +5862,7 @@ ul.objetivos.check2 li::before{
 
 /* Safari 10.1+ */
 
-@media not all and (min-resolution:.001dpcm) { @media {
+@media not all and (min-resolution:.001dpcm) { 
 
     ul.objetivos li::before{
 
@@ -5872,7 +5873,7 @@ ul.objetivos.check2 li::before{
 		margin-left: 5px;
 		/* height: auto; */
 	}
-}}
+}
 
 /* 25. RESPONSIVE STYLES */
 
@@ -6893,4 +6894,8 @@ input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button { 
   -webkit-appearance: none; 
   margin: 0; 
+}
+.grecaptcha-badge {
+    z-index: 1000;
+    display: none!important;
 }
